Update Oltalama URL AlgilamaveEgitimModeli.ipynb

--- a/Oltalama URL AlgilamaveEgitimModeli.ipynb
+++ b/Oltalama URL AlgilamaveEgitimModeli.ipynb
@@ -21,7 +21,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Phishing Website Detection by Machine Learning Techniques**\n",
+         "# **MURAT DEMİRCİ TEZ ÇALIŞMASI**\n",
+        "# **MAKİNE ÖĞRENMESİ YAKLAŞIMI KULLANARAK SİBER E-DOLANDIRICILIK SALDIRILARININ TESPİTİ**\n",
         "\n",
         "*Final project of AI & Cybersecurity Course*"
       ]
