Update Oltalama URL AlgilamaveEgitimModeli.ipynb

--- a/Oltalama URL AlgilamaveEgitimModeli.ipynb
+++ b/Oltalama URL AlgilamaveEgitimModeli.ipynb
@@ -34,11 +34,9 @@
         "colab_type": "text"
       },
       "source": [
-        "## **1. Objective:**\n",
-        "A phishing website is a common social engineering method that mimics trustful uniform resource locators (URLs) and webpages. The objective of this project is to train machine learning models and deep neural nets on the dataset created to predict phishing websites. Both phishing and benign URLs of websites are gathered to form a dataset and from them required URL and website content-based features are extracted. The performance level of each model is measures and compared.\n",
+        "## **1. AMAÇ:**\n",
+        "Bu veri setleri içinden 5.000 adet legal 5.000  adette illegal URL adresi olacak şekilde yeni bir veri seti oluşturulmuştur. Bu veri seti legalveillegal.csv olarak isimlendirilmiştir.\n",
         "\n",
-        "*This project is worked on Google Collaboratory.*<br>\n",
-        "*The required packages for this notebook are imported when needed.*"
       ]
     },
     {
