--- a/Oltalama URL AlgilamaveEgitimModeli.ipynb
+++ b/Oltalama URL AlgilamaveEgitimModeli.ipynb
@@ -23,7 +23,7 @@
       "source": [
          "# **MURAT DEMİRCİ TEZ ÇALIŞMASI**\n",
         "# **MAKİNE ÖĞRENMESİ YAKLAŞIMI KULLANARAK SİBER E-DOLANDIRICILIK SALDIRILARININ TESPİTİ**\n",
-        "*Final project of AI & Cybersecurity Course*"
+        "*Final project of AI & Cybersecurity Course*",
       ]
     },
     {
