Update Oltalama URL AlgilamaveEgitimModeli.ipynb

--- a/Oltalama URL AlgilamaveEgitimModeli.ipynb
+++ b/Oltalama URL AlgilamaveEgitimModeli.ipynb
@@ -21,9 +21,10 @@
         "colab_type": "text"
       },
       "source": [
+        "# **MURAT DEMİRCİ TEZ ÇALIŞMASI**\n",
         "# **MAKİNE ÖĞRENMESİ YAKLAŞIMI KULLANARAK SİBER E-DOLANDIRICILIK SALDIRILARININ TESPİTİ**\n",
         "\n",
-        "*TEZ ÇALIŞMASI"
+        " "
       ]
     },
     {
@@ -36,8 +37,8 @@
         "## **1. AMAÇ:**\n",
         "Bu veri setleri içinden 5.000 adet legal 5.000  adette illegal URL adresi olacak şekilde yeni bir veri seti oluşturulmuştur. Bu veri seti legalveillegal.csv olarak isimlendirilmiştir.\n",
         "\n",
-        "*This project is worked on Google Collaboratory.*<br>\n",
-        "*The required packages for this notebook are imported when needed.*"
+        "<br>\n",
+        ""
       ]
     },
     {
