--- a/URLOzellikAyirma.ipynb
+++ b/URLOzellikAyirma.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "URL Feature Extraction.ipynb",
+      "name": "URL_ozelliklerini_ayirma.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Phishing Website Detection Feature Extraction**\n",
+        "# **Veri seti içindeki URL adresleri aşağıda belirtilen şekilde kategoriye ayrılmıştır.**\n",
         "\n",
         "*Final project of AI & Cybersecurity Course*"
       ]
