--- a/URLOzellikAyirma.ipynb
+++ b/URLOzellikAyirma.ipynb
@@ -22,9 +22,10 @@
         "colab_type": "text"
       },
       "source": [
+         "# **MURAT DEMİRCİ TEZ ÇALIŞMASI**\n",
         "# **Veri seti içindeki URL adresleri aşağıda belirtilen şekilde kategoriye ayrılmıştır.**\n",
         "\n",
-        "*Final project of AI & Cybersecurity Course*"
+        "* *"
       ]
     },
     {
