--- a/URLOzellikAyirma.ipynb
+++ b/URLOzellikAyirma.ipynb
@@ -35,10 +35,10 @@
         "colab_type": "text"
       },
       "source": [
-        "# **1. Objective:**\n",
-        "A phishing website is a common social engineering method that mimics trustful uniform resource locators (URLs) and webpages. The objective of this notebook is to collect data & extract the selctive features form the URLs.\n",
+        "# **1. AMAÇ:**\n",
+        "veri madenciliği ve makine öğrenmesi yöntemleri ile tespit edilmeye çalışılmış olup, saldırıların hedefe zarar vermeden engellenmesi amaçlanmıştır.\n",
         "\n",
-        "*This project is worked on Google Collaboratory.*\n",
+        "\n",
         "\n"
       ]
     },
