--- a/URLOzellikAyirma.ipynb
+++ b/URLOzellikAyirma.ipynb
@@ -36,7 +36,7 @@
       },
       "source": [
         "# **1. AMAÇ:**\n",
-        "veri madenciliği ve makine öğrenmesi yöntemleri ile tespit edilmeye çalışılmış olup, saldırıların hedefe zarar vermeden engellenmesi amaçlanmıştır.\n",
+        "Veri madenciliği ve makine öğrenmesi yöntemleri ile tespit edilmeye çalışılmış olup, saldırıların hedefe zarar vermeden engellenmesi amaçlanmıştır.\n",
         "\n",
         "\n",
         "\n"
@@ -49,12 +49,12 @@
         "colab_type": "text"
       },
       "source": [
-        "# **2. Collecting the Data:**\n",
-        "For this project, we need a bunch of urls of type legitimate (0) and phishing (1). \n",
+        "# **2. Verilerin Toplanması:***\n",
+        "Bu tez çalışmasında, URL'nin yapısı legal (0) ve illegal (1) türünde ayrılmıştır. \n",
         "\n",
-        "The collection of phishing urls is rather easy because of the opensource service called PhishTank. This service provide a set of phishing URLs in multiple formats like csv, json etc. that gets updated hourly. To download the data: https://www.phishtank.com/developer_info.php\n",
         "\n",
-        "For the legitimate URLs, I found a source that has a collection of benign, spam, phishing, malware & defacement URLs. The source of the dataset is University of New Brunswick, https://www.unb.ca/cic/datasets/url-2016.html. The number of legitimate URLs in this collection are 35,300. The URL collection is downloaded & from that, *'Benign_list_big_final.csv'* is the file of our interest. This file is then uploaded to the Colab for the feature extraction. \n"
+        "\n",
+        "\n"
       ]
     },
     {
@@ -64,9 +64,9 @@
         "colab_type": "text"
       },
       "source": [
-        "## **2.1. Phishing URLs:**\n",
+        "## **2.1. İllegal URLs:**\n",
         "\n",
-        "The phishing URLs are collected from the PhishTank from the link provided. The csv file of phishing URLs is obtained by using wget command. After downlaoding the dataset, it is loaded into a DataFrame."
+        " "
       ]
     },
     {
