--- a/URLOzellikAyirma.ipynb
+++ b/URLOzellikAyirma.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-         "# **MURAT DEMİRCİ TEZ ÇALIŞMASI**\n",
+         "# **MURAT DEMİRCİ TEZ ÇALIŞMASI*\n",
         "# **Veri seti içindeki URL adresleri aşağıda belirtilen şekilde kategoriye ayrılmıştır.**\n",
         "\n",
         ""
@@ -95,7 +95,7 @@
         }
       },
       "source": [
-        "#Downloading the phishing URLs file\n",
+        " ",
         "!wget http://data.phishtank.com/data/online-valid.csv"
       ],
       "execution_count": 0,
@@ -135,7 +135,7 @@
         "colab_type": "text"
       },
       "source": [
-        "The above command downlaods the file of phishing URLs, *online-valid.csv* and stores in the */content/* folder. "
+        " "
       ]
     },
     {
@@ -303,9 +303,9 @@
         "colab_type": "text"
       },
       "source": [
-        "So, the data has thousands of phishing URLs. But the problem here is, this data gets updated hourly. Without getting into the risk of data imbalance, I am considering a margin value of 10,000 phishing URLs & 5000 legitimate URLs. \n",
         "\n",
-        "Thereby, picking up 5000 samples from the above dataframe randomly."
+        "\n",
+        " "
       ]
     },
     {
