--- a/URLOzellikAyirma.ipynb
+++ b/URLOzellikAyirma.ipynb
@@ -476,9 +476,9 @@
       "source": [
         "As of now we collected 5000 phishing URLs. Now, we need to collect the legitimate URLs.\n",
         "\n",
-        "## **2.2. Legitimate URLs:**\n",
+        "## **2.2. Legal URL:**\n",
         "\n",
-        "From the uploaded *Benign_list_big_final.csv* file, the URLs are loaded into a dataframe."
+        " "
       ]
     },
     {
@@ -494,7 +494,7 @@
       },
       "source": [
         "#Loading legitimate files \n",
-        "data1 = pd.read_csv(\"Benign_list_big_final.csv\")\n",
+        "data1 = pd.read_csv(\"legal.csv\")\n",
         "data1.columns = ['URLs']\n",
         "data1.head()"
       ],
@@ -573,7 +573,7 @@
         "colab_type": "text"
       },
       "source": [
-        "As stated above, 5000 legitimate URLs are randomaly picked from the above dataframe."
+        " "
       ]
     },
     {
@@ -698,16 +698,16 @@
         "colab_type": "text"
       },
       "source": [
-        "# **3. Feature Extraction:**\n",
+        "# **3. Özelliklerin Ayrıştırılması:**\n",
         "\n",
-        "In this step, features are extracted from the URLs dataset.\n",
+        "Veri Setindeki URL adreslerinin özellikleri aşağıda belirtilen şekilde kategoriye ayrıldı.\n",
         "\n",
         "The extracted features are categorized into\n",
         "\n",
         "\n",
-        "1.   Address Bar based Features\n",
-        "2.   Domain based Features\n",
-        "3.   HTML & Javascript based Features\n",
+        "1.   Adres Çubuğuna Dayalı Özellikler\n",
+        "2.   Etki Alanına Dayalı Özellikler\n",
+        "3.   HTML ve Javascript Tabanlı Özellikler\n",
         "\n"
       ]
     },
@@ -718,22 +718,22 @@
         "colab_type": "text"
       },
       "source": [
-        "### **3.1. Address Bar Based Features:**\n",
+        "### **3.1. Adres Çubuğuna Dayalı Özellikler: **\n",
         "\n",
         "Many features can be extracted that can be consided as address bar base features. Out of them, below mentioned were considered for this project.\n",
         "\n",
         "\n",
-        "*   Domain of URL\n",
-        "*   IP Address in URL\n",
-        "*   \"@\" Symbol in URL\n",
-        "*   Length of URL\n",
-        "*   Depth of URL\n",
-        "*   Redirection \"//\" in URL\n",
-        "*   \"http/https\" in Domain name\n",
-        "*   Using URL Shortening Services “TinyURL”\n",
-        "*   Prefix or Suffix \"-\" in Domain\n",
+        "*   URL’deki Domain Adresinin Kontrollü\n",
+        "*   URL’deki IP Adresi Kontrollü\n",
+        "*   URL’de @ işareti Kontrollü\n",
+        "*   LURL’nin Uzunluğu \n",
+        "*   URL’nin Derinliği\n",
+        "*   URL’de ‘//’ Yönlendirme İşareti Kontro\n",
+        "*   http/https Protokol Kontrollü\n",
+        "*   URL’de Kısa Link Kullanımı Kontrollü\n",
+        "*   Domain Adresin Önünde veya Sonunda ‘-’ İşaretinin Kontrollü\n",
         "\n",
-        "Each of these features are explained and the coded below:"
+        " "
       ]
     },
     {
