--- a/URLOzellikAyirma.ipynb
+++ b/URLOzellikAyirma.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-         "# **MURAT DEMİRCİ TEZ ÇALIŞMASI*\n",
+         "# *MURAT DEMİRCİ TEZ ÇALIŞMASI*\n",
         "# **Veri seti içindeki URL adresleri aşağıda belirtilen şekilde kategoriye ayrılmıştır.**\n",
         "\n",
         ""
@@ -720,7 +720,7 @@
       "source": [
         "### **3.1. Adres Çubuğuna Dayalı Özellikler: **\n",
         "\n",
-        "Many features can be extracted that can be consided as address bar base features. Out of them, below mentioned were considered for this project.\n",
+        " \n",
         "\n",
         "\n",
         "*   URL’deki Domain Adresinin Kontrollü\n",
@@ -759,8 +759,8 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.1.1. Domain of the URL**\n",
-        "Here, we are just extracting the domain present in the URL. This feature doesn't have much significance in the training. May even be dropped while training the model."
+        "#### **3.1.1. URL’deki Domain Adresinin Kontrollü**\n",
+        "URL adresindeki Domain Adresini Ayrıştırır, www kaldırır. Örnek: www.uskudar.edu.tr adresini uskudar.edu.tr olarak kayıt ediyor."
       ]
     },
     {
@@ -771,7 +771,7 @@
         "colab": {}
       },
       "source": [
-        "# 1.Domain of the URL (Domain) \n",
+        "# 1.URL’deki Domain Adresinin Kontrollü\n",
         "def getDomain(url):  \n",
         "  domain = urlparse(url).netloc\n",
         "  if re.match(r\"^www.\",domain):\n",
