--- a/URLOzellikAyirma.ipynb
+++ b/URLOzellikAyirma.ipynb
@@ -788,11 +788,11 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.1.2. IP Address in the URL**\n",
+        "#### **3.1.2. URL’deki IP Adresi Kontrollü**\n",
         "\n",
-        "Checks for the presence of IP address in the URL. URLs may have IP address instead of domain name. If an IP address is used as an alternative of the domain name in the URL, we can be sure that someone is trying to steal personal information with this URL.\n",
+        "URL  adresindeki IP adresinin varlığını kontrol eder. IP adresi varsa 1 (illegal)  yoksa 0 (legal) değeri atanır.\n",
         "\n",
-        "If the domain part of URL has IP address, the value assigned to this feature is 1 (phishing) or else 0 (legitimate).\n",
+        " \n",
         "\n"
       ]
     },
@@ -804,7 +804,7 @@
         "colab": {}
       },
       "source": [
-        "# 2.Checks for IP address in URL (Have_IP)\n",
+        "# 2.URL’deki IP Adresi Kontrollü\n",
         "def havingIP(url):\n",
         "  try:\n",
         "    ipaddress.ip_address(url)\n",
@@ -823,11 +823,11 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.1.3. \"@\" Symbol in URL**\n",
+        "#### **3.1.3. URL’de @ işareti Kontrollü**\n",
         "\n",
-        "Checks for the presence of '@' symbol in the URL. Using “@” symbol in the URL leads the browser to ignore everything preceding the “@” symbol and the real address often follows the “@” symbol. \n",
+        "URL  adresindeki @ işaretinin varlığını kontrol eder. İşaret varsa 1 (illegal)  yoksa 0 (legal) değeri atanır.\n",
         "\n",
-        "If the URL has '@' symbol, the value assigned to this feature is 1 (phishing) or else 0 (legitimate)."
+        "URL adresindeki bilginin @ işaretinden önceki değeri okunamaz."
       ]
     },
     {
@@ -838,7 +838,7 @@
         "colab": {}
       },
       "source": [
-        "# 3.Checks the presence of @ in URL (Have_At)\n",
+        "# 3.URL’de @ işareti Kontrollü*\n",
         "def haveAtSign(url):\n",
         "  if \"@\" in url:\n",
         "    at = 1    \n",
@@ -856,11 +856,11 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.1.4. Length of URL**\n",
+        "#### **3.1.4. URL’nin Uzunluğu **\n",
         "\n",
-        "Computes the length of the URL. Phishers can use long URL to hide the doubtful part in the address bar. In this project, if the length of the URL is greater than or equal 54 characters then the URL classified as phishing otherwise legitimate.\n",
+        "URL  adresindeki karakter uzunluğu hesaplanır. Bu uzunluk teknik olarak 2048 karakterinden fazla olamaz. Bu çalışmada  adres karakter uzunluğu 54’den az olması istenmiştir. Uzun ise 1 (illegal)  değilse  0 (legal) olarak hesaplanmıştır.\n",
         "\n",
-        "If the length of URL >= 54 , the value assigned to this feature is 1 (phishing) or else 0 (legitimate)."
+        " "
       ]
     },
     {
@@ -871,7 +871,7 @@
         "colab": {}
       },
       "source": [
-        "# 4.Finding the length of URL and categorizing (URL_Length)\n",
+        "# 4.URL’nin Uzunluğu\n",
         "def getLength(url):\n",
         "  if len(url) < 54:\n",
         "    length = 0            \n",
@@ -889,11 +889,11 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.1.5. Depth of URL**\n",
+        "#### **3.1.5. URL’nin Derinliği **\n",
         "\n",
-        "Computes the depth of the URL. This feature calculates the number of sub pages in the given url based on the '/'.\n",
+        "URL  adresindeki domain adresinin derinliği hesaplanır. Bu derinlik alt sayfaların «/» işaretleri baz alınarak hesaplanır. Adresteki bölümlere göre değer atanır.Örnek : https://uskudar.edu.tr/akademik-personel/murat-demirci.\n",
         "\n",
-        "The value of feature is a numerical based on the URL."
+        " "
       ]
     },
     {
@@ -904,7 +904,7 @@
         "colab": {}
       },
       "source": [
-        "# 5.Gives number of '/' in URL (URL_Depth)\n",
+        "# 5.URL’nin Derinliği\n",
         "def getDepth(url):\n",
         "  s = urlparse(url).path.split('/')\n",
         "  depth = 0\n",
@@ -923,11 +923,11 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.1.6. Redirection \"//\" in URL**\n",
+        "#### **3.1.6. URL’de ‘//’ Yönlendirme İşareti Kontrollü **\n",
         "\n",
-        "Checks the presence of \"//\" in the URL. The existence of “//” within the URL path means that the user will be redirected to another website. The location of the “//” in URL is computed. We find that if the URL starts with “HTTP”, that means the “//” should appear in the sixth position. However, if the URL employs “HTTPS” then the “//” should appear in seventh position.\n",
+        "URL  adresindeki «//»  işareti kontrol edilir. Bu işaretin olması farklı bir web sayfasına yönlendirildiği anlamı gelir. İşaret varsa 1 (illegal)  yoksa 0 (legal) değeri atanır.\n",
         "\n",
-        "If the \"//\" is anywhere in the URL apart from after the protocal, thee value assigned to this feature is 1 (phishing) or else 0 (legitimate)."
+        " "
       ]
     },
     {
@@ -938,7 +938,7 @@
         "colab": {}
       },
       "source": [
-        "# 6.Checking for redirection '//' in the url (Redirection)\n",
+        "# 6.URL’de ‘//’ Yönlendirme İşareti Kontrollü \n",
         "def redirection(url):\n",
         "  pos = url.rfind('//')\n",
         "  if pos > 6:\n",
@@ -959,9 +959,9 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.1.7. \"http/https\" in Domain name**\n",
+        "#### **3.1.7. http/https Protokol Kontrollü **\n",
         "\n",
-        "Checks for the presence of \"http/https\" in the domain part of the URL. The phishers may add the “HTTPS” token to the domain part of a URL in order to trick users.\n",
+        "URL  adresindekinin içinde http/https protokol isimlerini kontrol eder. Bu protokol isimlerinin gerçekçi olması için etki alanının içinde kullanılabiliyor. Protokol varsa 1 (illegal)  yoksa 0 (legal) değeri atanır. Örnek : http.uskudar.edu.tr/akademik-personel/murat-demirci \n",
         "\n",
         "If the URL has \"http/https\" in the domain part, the value assigned to this feature is 1 (phishing) or else 0 (legitimate)."
       ]
@@ -974,7 +974,7 @@
         "colab": {}
       },
       "source": [
-        "# 7.Existence of “HTTPS” Token in the Domain Part of the URL (https_Domain)\n",
+        "# 7.http/https Protokol Kontrollü",
         "def httpDomain(url):\n",
         "  domain = urlparse(url).netloc\n",
         "  if 'https' in domain:\n",
@@ -992,11 +992,11 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.1.8. Using URL Shortening Services “TinyURL”**\n",
+        "#### **3.1.8. URL’de Kısa Link Kullanımı Kontrollü**\n",
         "\n",
-        "URL shortening is a method on the “World Wide Web” in which a URL may be made considerably smaller in length and still lead to the required webpage. This is accomplished by means of an “HTTP Redirect” on a domain name that is short, which links to the webpage that has a long URL. \n",
+        "Kısaltma linki kullanıyorsa alacağı değer 1(illegal) kullanmıyorsa 0 (legal) değeri atanır.\n",
         "\n",
-        "If the URL is using Shortening Services, the value assigned to this feature is 1 (phishing) or else 0 (legitimate)."
+        " "
       ]
     },
     {
@@ -1028,7 +1028,7 @@
         "colab": {}
       },
       "source": [
-        "# 8. Checking for Shortening Services in URL (Tiny_URL)\n",
+        "# 8. URL’de Kısa Link Kullanımı Kontrollü\n",
         "def tinyURL(url):\n",
         "    match=re.search(shortening_services,url)\n",
         "    if match:\n",
@@ -1046,11 +1046,11 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.1.9. Prefix or Suffix \"-\" in Domain**\n",
+        "#### **3.1.9. Domain Adresin Önünde veya Sonunda ‘-’ İşaretinin Kontrollü \n",
         "\n",
-        "Checking the presence of '-' in the domain part of URL. The dash symbol is rarely used in legitimate URLs. Phishers tend to add prefixes or suffixes separated by (-) to the domain name so that users feel that they are dealing with a legitimate webpage. \n",
+        "URL adresindekinin içinde «-» işareti kontrol edilir.  Bu işaret etki alanının içinde kullanılabiliyor. 1 (illegal)  yoksa 0 (legal) değeri atanır.\n",
         "\n",
-        "If the URL has '-' symbol in the domain part of the URL, the value assigned to this feature is 1 (phishing) or else 0 (legitimate)."
+        " "
       ]
     },
     {
@@ -1061,7 +1061,7 @@
         "colab": {}
       },
       "source": [
-        "# 9.Checking for Prefix or Suffix Separated by (-) in the Domain (Prefix/Suffix)\n",
+        "# 9. Domain Adresin Önünde veya Sonunda ‘-’ İşaretinin Kontrollü\n",
         "def prefixSuffix(url):\n",
         "    if '-' in urlparse(url).netloc:\n",
         "        return 1            # phishing\n",
@@ -1078,14 +1078,14 @@
         "colab_type": "text"
       },
       "source": [
-        "### **3.2. Domain Based Features:**\n",
+        "### **3.2. Domain Name Adresinin Özellikleri**\n",
         "\n",
         "Many features can be extracted that come under this category. Out of them, below mentioned were considered for this project.\n",
         "\n",
-        "*   DNS Record\n",
-        "*   Website Traffic \n",
-        "*   Age of Domain\n",
-        "*   End Period of Domain\n",
+        "*   DNS Kaydı\n",
+        "*   Web Sitesi Trafiği \n",
+        "*   Alan Adının Ne Zaman Alındığı (Yaşı)\n",
+        "*   Alan Adının Ne Zaman Alındığı (Yaşı)\n",
         "\n",
         "Each of these features are explained and the coded below:"
       ]
@@ -1151,10 +1151,10 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.2.1. DNS Record**\n",
+        "#### **3.2.1. DNS Kaydı**\n",
         "\n",
-        "For phishing websites, either the claimed identity is not recognized by the WHOIS database or no records founded for the hostname. \n",
-        "If the DNS record is empty or not found then, the value assigned to this feature is 1 (phishing) or else 0 (legitimate)."
+        "Whois veritabında DNS kaydı yoksa 1 (illegal)  kayıt varsa 0 (legal) değeri atanır.\n",
+        " "
       ]
     },
     {
@@ -1165,7 +1165,7 @@
         "colab": {}
       },
       "source": [
-        "# 11.DNS Record availability (DNS_Record)\n",
+        "# 11.DNS Kaydı\n",
         "# obtained in the featureExtraction function itself"
       ],
       "execution_count": 0,
@@ -1178,11 +1178,11 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.2.2. Web Traffic**\n",
+        "#### **3.2.2. Web Sitesi Trafiği**\n",
         "\n",
-        "This feature measures the popularity of the website by determining the number of visitors and the number of pages they visit. However, since phishing websites live for a short period of time, they may not be recognized by the Alexa database (Alexa the Web Information Company., 1996). By reviewing our dataset, we find that in worst scenarios, legitimate websites ranked among the top 100,000. Furthermore, if the domain has no traffic or is not recognized by the Alexa database, it is classified as “Phishing”.\n",
+        "Alexa veritanından kontrol edilir. Bu değer 100.000 üstündeyse 0 (legal) değilse  1 (illegal) değeri atanır.\n",
         "\n",
-        "If the rank of the domain < 100000, the vlaue of this feature is 1 (phishing) else 0 (legitimate)."
+        " "
       ]
     },
     {
@@ -1193,7 +1193,7 @@
         "colab": {}
       },
       "source": [
-        "# 12.Web traffic (Web_Traffic)\n",
+        "# 12.Web Sitesi Trafiği\n",
         "def web_traffic(url):\n",
         "  try:\n",
         "    #Filling the whitespaces in the URL if any\n",
@@ -1218,11 +1218,11 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.2.3. Age of Domain**\n",
+        "#### **3.2.3. Alan Adının Ne Zaman Alındığı (Yaşı)**\n",
         "\n",
-        "This feature can be extracted from WHOIS database. Most phishing websites live for a short period of time. The minimum age of the legitimate domain is considered to be 12 months for this project. Age here is nothing but different between creation and expiration time.\n",
+        "Whois veritabında legal alan adını 12 ay olarak hesaplanmıştır. Alan adının satın alındığı tarih ile sona erme tarihi hesaplanarak bu değer bulunmuştur. Yaş 12’aydan küçük  ise 1 (illegal) değilse 0 (legal) olarak değer atanır.\n",
         "\n",
-        "If age of domain > 12 months, the vlaue of this feature is 1 (phishing) else 0 (legitimate)."
+        " "
       ]
     },
     {
@@ -1265,11 +1265,11 @@
         "colab_type": "text"
       },
       "source": [
-        "#### **3.2.4. End Period of Domain**\n",
+        "#### **3.2.4. Alan Adının Bitiş Süresi**\n",
         "\n",
-        "This feature can be extracted from WHOIS database. For this feature, the remaining domain time is calculated by finding the different between expiration time & current time. The end period considered for the legitimate domain is 6 months or less  for this project. \n",
+        "Whois veritabında kalan alan adı yenileme süresi 6 ay veya daha fazla olması şeklinde hesaplanmıştır.  Bu şekilde olursa  (legal) daha kısa ise  (illegal) olarak hesaplanmıştır.\n",
         "\n",
-        "If end period of domain > 6 months, the vlaue of this feature is 1 (phishing) else 0 (legitimate)."
+        " "
       ]
     },
     {
@@ -1280,7 +1280,7 @@
         "colab": {}
       },
       "source": [
-        "# 14.End time of domain: The difference between termination time and current time (Domain_End) \n",
+        "# 14.Alan Adının Bitiş Süresi \n",
         "def domainEnd(domain_name):\n",
         "  expiration_date = domain_name.expiration_date\n",
         "  if isinstance(expiration_date,str):\n",
