--- a/URLOzellikAyirma.ipynb
+++ b/URLOzellikAyirma.ipynb
@@ -1311,16 +1311,16 @@
         "colab_type": "text"
       },
       "source": [
-        "## **3.3. HTML and JavaScript based Features**\n",
+        "## **3.3. HTML ve Javascript Kod İçeriği Özelliği**\n",
         "\n",
-        "Many features can be extracted that come under this category. Out of them, below mentioned were considered for this project.\n",
+        " \n",
         "\n",
-        "*   IFrame Redirection\n",
-        "*   Status Bar Customization\n",
-        "*   Disabling Right Click\n",
-        "*   Website Forwarding\n",
+        "*   Iframe Yönlendirme\n",
+        "*   Durum Çubuğu Özelleştirme\n",
+        "*   Sayfa İçerisinde Sağ Tıklamayı Devre Dışı Bırakama\n",
+        "*   Web Sitesini Otomatik Yönlendirme\n",
         "\n",
-        "Each of these features are explained and the coded below:"
+        " "
       ]
     },
     {
@@ -1344,11 +1344,11 @@
         "colab_type": "text"
       },
       "source": [
-        "### **3.3.1. IFrame Redirection**\n",
+        "### **3.3.1. Iframe Yönlendirme**\n",
         "\n",
-        "IFrame is an HTML tag used to display an additional webpage into one that is currently shown. Phishers can make use of the “iframe” tag and make it invisible i.e. without frame borders. In this regard, phishers make use of the “frameBorder” attribute which causes the browser to render a visual delineation. \n",
+        "Iframe mevcut gösterilen web sayfasının içerisinde farklı bir pencerede ek bir web sayfası açmasına sebep olabilir. Bu html etiketi varsa 1(illegal) yoksa 0 (legal) olarak atama yapılır.\n",
         "\n",
-        "If the iframe is empty or repsonse is not found then, the value assigned to this feature is 1 (phishing) or else 0 (legitimate)."
+        " "
       ]
     },
     {
@@ -1359,7 +1359,7 @@
         "colab": {}
       },
       "source": [
-        "# 15. IFrame Redirection (iFrame)\n",
+        "# 15. Iframe Yönlendirme\n",
         "def iframe(response):\n",
         "  if response == \"\":\n",
         "      return 1\n",
@@ -1379,11 +1379,11 @@
         "colab_type": "text"
       },
       "source": [
-        "### **3.3.2. Status Bar Customization**\n",
+        "### **3.3.2. Durum Çubuğu Özelleştirme**\n",
         "\n",
-        "Phishers may use JavaScript to show a fake URL in the status bar to users. To extract this feature, we must dig-out the webpage source code, particularly the “onMouseOver” event, and check if it makes any changes on the status bar\n",
+        "Durum çubuğunda Javascript kodları ile sahte bir web sayfası gösteriliyor olabilir. Mouse ile üzerine gelindiğin de boş gösteriyorsa 1 (illegal) değilse 0 (legal)  \n",
         "\n",
-        "If the response is empty or onmouseover is found then, the value assigned to this feature is 1 (phishing) or else 0 (legitimate)."
+        " "
       ]
     },
     {
@@ -1394,7 +1394,7 @@
         "colab": {}
       },
       "source": [
-        "# 16.Checks the effect of mouse over on status bar (Mouse_Over)\n",
+        "# 16.Durum Çubuğu Özelleştirme \n",
         "def mouseOver(response): \n",
         "  if response == \"\" :\n",
         "    return 1\n",
@@ -1414,11 +1414,11 @@
         "colab_type": "text"
       },
       "source": [
-        "### **3.3.3. Disabling Right Click**\n",
+        "### **3.3.3. Sayfa İçerisinde Sağ Tıklamayı Devre Dışı Bırakama**\n",
         "\n",
-        "Phishers use JavaScript to disable the right-click function, so that users cannot view and save the webpage source code. This feature is treated exactly as “Using onMouseOver to hide the Link”. Nonetheless, for this feature, we will search for event “event.button==2” in the webpage source code and check if the right click is disabled.\n",
+        "Web sayfalarında sağ tıkladığında html kodlarına erişim sağlanır ve sayfalar hakkında bilgi edinilmeye çalışılır.Eğer cevap alınmıyorsa 1 ( illegal) alınabiliyorsa 0 (legal) olarak değer atanır.\n",
         "\n",
-        "If the response is empty or onmouseover is not found then, the value assigned to this feature is 1 (phishing) or else 0 (legitimate).\n",
+        "\n",
         "\n",
         "\n"
       ]
@@ -1431,7 +1431,7 @@
         "colab": {}
       },
       "source": [
-        "# 17.Checks the status of the right click attribute (Right_Click)\n",
+        "# 17.Sayfa İçerisinde Sağ Tıklamayı Devre Dışı Bırakama*\n",
         "def rightClick(response):\n",
         "  if response == \"\":\n",
         "    return 1\n",
@@ -1451,8 +1451,8 @@
         "colab_type": "text"
       },
       "source": [
-        "### **3.3.4. Website Forwarding**\n",
-        "The fine line that distinguishes phishing websites from legitimate ones is how many times a website has been redirected. In our dataset, we find that legitimate websites have been redirected one time max. On the other hand, phishing websites containing this feature have been redirected at least 4 times. \n",
+        "### **3.3.4. Web Sitesini Otomatik Yönlendirme **\n",
+        "Bir web sitesinin kaç kez yeniden yönlendirildiğini kontrol eder. Eğer yönlendirme 2 ve üzerindeyse 1 ( illegal) değilse  0 (legal) olarak değer atanır. \n",
         "\n",
         "\n"
       ]
@@ -1465,7 +1465,7 @@
         "colab": {}
       },
       "source": [
-        "# 18.Checks the number of forwardings (Web_Forwards)    \n",
+        "# 18.Web Sitesini Otomatik Yönlendirme  \n",
         "def forwarding(response):\n",
         "  if response == \"\":\n",
         "    return 1\n",
